
Table "Aircraft" {
  "Aircraft_ID" INT [pk]
  "Registration_Number" VARCHAR(20)
  "Model" VARCHAR(50)
  "Manufacturer" VARCHAR(50)
  "Manufacture_Date" DATE
  "Engine_Type" VARCHAR(50)
  "Max_Range_KM" INT
  "Passenger_Capacity" INT
  "Fuel_Capacity_Liters" DECIMAL(10,2)
  "Cargo_Capacity_KG" INT
  "Is_Active" BIT [default: 1]
}

Table "Airport" {
  "Airport_Code" VARCHAR(10) [pk]
  "Airport_Name" VARCHAR(100)
  "IATA_Code" CHAR(3)
  "ICAO_Code" CHAR(4)
  "City" VARCHAR(50)
  "Country" VARCHAR(50)
  "Latitude" DECIMAL(10,6)
  "Longitude" DECIMAL(10,6)
  "Timezone" VARCHAR(50)
  "Elevation_Feet" INT
  "Terminal_Count" INT
  "Opening_Date" DATE
  "Is_International" BIT
  "Is_Active" BIT [default: 1]
}

Table "Route" {
  "Route_ID" INT [pk]
  "Route_Code" VARCHAR(20)
  "Route_Name" VARCHAR(100)
  "Origin_Airport_Code" VARCHAR(10)
  "Destination_Airport_Code" VARCHAR(10)
  "Distance_KM" INT
  "Flight_Duration_Minutes" INT
  "Is_International" BIT
  "Is_Active" BIT [default: 1]
}

Table "Loyalty_Tier" {
  "Loyalty_Tier_ID" INT [pk]
  "Tier_Name" VARCHAR(50)
  "Benefits" NVARCHAR(1000)
  "Required_Points" INT
  "Is_Active" BIT [default: 1]
}

Table "Customer" {
  "Customer_ID" INT [pk]
  "Passport_Code" VARCHAR(20)
  "First_Name" VARCHAR(50)
  "Last_Name" VARCHAR(50)
  "Email" VARCHAR(100) [unique]
  "Phone_Number" VARCHAR(20) [unique]
  "Gender" CHAR(1)
  "Birth_Date" DATE
  "Nationality" VARCHAR(50)
  "City" VARCHAR(50)
  "Country" VARCHAR(50)
  "Address" VARCHAR(200)
  "Postal_Code" VARCHAR(20)
  "Preferred_Language" VARCHAR(30)
  "Loyalty_Tier_ID" INT
  "Loyalty_Points" INT [default: 0]
  "Loyalty_Change_Date" DATE
  "Is_Active" BIT [default: 1]
  "Last_Login_Date" DATETIME
  "Created_At" DATETIME [default: `SYSDATETIME()`]
  "Updated_At" DATETIME [default: `SYSDATETIME()`]
}

Table "Class" {
  "Class_ID" INT [pk]
  "Class_Code" VARCHAR(10) [not null]
  "Class_Name" VARCHAR(50) [not null]
  "Description" NVARCHAR(500)
  "Base_Price_Multiplier" DECIMAL(4,2) [not null]
  "Change_Fee_Amount" DECIMAL(10,2)
  "Cancellation_Fee_Amount" DECIMAL(10,2)
  "Baggage_Allowance_KG" DECIMAL(5,2) [not null]
  "Carry_On_Allowance_KG" DECIMAL(5,2) [not null]
  "Is_Active" BIT [not null, default: 1]
}

Table "Payment_Method" {
  "Payment_Method_ID" INT [pk]
  "Method_Name" VARCHAR(50)
  "Description" NVARCHAR(200)
  "Provider_Name" VARCHAR(50)
  "Processing_Fee" DECIMAL(5,2)
  "Currency" VARCHAR(3)
  "Is_Active" BIT [default: 1]
}

Table "Cargo_Type" {
  "Cargo_Type_ID" INT [pk]
  "Type_Name" VARCHAR(100) [not null]
  "Description" NVARCHAR(1000)
  "Is_Hazardous" BIT [not null, default: 0]
  "Max_Weight_KG" DECIMAL(10,2)
}

Table "Employee" {
  "Employee_ID" INT [pk]
  "First_Name" VARCHAR(50)
  "Last_Name" VARCHAR(50)
  "Email" VARCHAR(100)
  "Phone_Number" VARCHAR(20)
  "Birth_Date" DATE
  "Hire_Date" DATE
  "Exit_Date" DATE
  "Emergency_Contact" VARCHAR(100)
}

Table "Crew_Role_Type" {
  "Role_Type_ID" INT [pk]
  "Role_Type_Name" VARCHAR(50) [not null]
  "Description" NVARCHAR(500)
}

Table "Crew_Role" {
  "Crew_Role_ID" INT [pk]
  "Crew_Role_Type_ID" INT [not null]
  "Role_Name" VARCHAR(50) [not null]
  "Description" NVARCHAR(500)
  "Basic_Fee_Per_Hour" DECIMAL(10,2) [not null]
}

Table "Crew" {
  "Crew_ID" INT [pk]
  "Employee_ID" INT
  "Crew_Role_Type_ID" INT
  "Certification_Level" VARCHAR(50)
  "Nationality" VARCHAR(50)
  "License_Number" VARCHAR(30)
  "License_Expiry_Date" DATE
  "Training_Hours" INT
}

Table "Technician" {
  "Technician_ID" INT [pk]
  "Employee_ID" INT
  "Specialty" VARCHAR(100)
  "Certification_Level" VARCHAR(50)
  "License_Number" VARCHAR(30)
  "License_Expiry_Date" DATE
  "Training_Hours" INT
  "Years_Experience" INT
  "Supervisor_ID" INT
}

Table "Maintenance_Type" {
  "Maintenance_Type_ID" INT [pk]
  "Type_Name" VARCHAR(100)
  "Description" NVARCHAR(1000)
  "Tools_Required" NVARCHAR(1000)
  "Estimated_Duration_Hours" INT
  "FAA_Required" BIT
}

Table "Flight_Status" {
  "Flight_Status_ID" INT [pk]
  "Status_Name" VARCHAR(50)
  "Description" NVARCHAR(200)
}

Table "Flight" {
  "Flight_ID" INT [pk]
  "Flight_Number" VARCHAR(10)
  "Flight_Date" DATE
  "Aircraft_ID" INT
  "Route_ID" INT
  "Scheduled_Departure" DATETIME
  "Scheduled_Arrival" DATETIME
  "Actual_Departure" DATETIME
  "Actual_Arrival" DATETIME
  "Passenger_Count" INT
  "Revenue" DECIMAL(15,2)
  "Fuel_Cost" DECIMAL(15,2)
  "Service_Cost" DECIMAL(15,2)
  "Flight_Status_ID" INT
}

Table "Booking_Cancellation_Reason" {
  "Cancellation_ID" INT [pk]
  "Reason" NVARCHAR(200)
  "Description" NVARCHAR(1000)
}

Table "Ticket_Status" {
  "Status_ID" INT [pk]
  "Name" VARCHAR(50)
  "Description" NVARCHAR(1000)
}

Table "Ticket" {
  "Ticket_ID" INT [pk]
  "Flight_ID" INT
  "Class_ID" INT
  "Ticket_Status_ID" INT
  "Price" DECIMAL(10,2)
  "Discount" DECIMAL(10,2)
  "Seat_Number" VARCHAR(10)
}

Table "Booking" {
  "Booking_ID" INT [pk]
  "Ticket_ID" INT
  "Customer_ID" INT
  "Payment_Method_ID" INT
  "Booking_Date" DATETIME
  "Total_Amount" DECIMAL(10,2)
  "Cancellation_Reason_ID" INT
  "Cancellation_Fee" DECIMAL(10,2)
  "Created_At" DATETIME2 [default: `SYSDATETIME()`]
  "Updated_At" DATETIME2 [default: `SYSDATETIME()`]
}

Table "Maintenance" {
  "Maintenance_ID" INT [pk]
  "Aircraft_ID" INT [not null]
  "Maintenance_Type_ID" INT [not null]
  "Technician_ID" INT [not null]
  "Maintenance_Start_Date" DATETIME [not null]
  "Maintenance_End_Date" DATETIME
  "Duration_Hours" DECIMAL(6,2)
  "Cost" DECIMAL(10,2)
  "Issue_Description" NVARCHAR(2000)
  "Resolution_Notes" NVARCHAR(2000)
  "Parts_Replaced" NVARCHAR(1000)
}

Table "Feedback" {
  "Feedback_ID" INT [pk]
  "Ticket_ID" INT
  "Flight_ID" INT
  "Feedback_Date" DATE
  "Rating" INT
  "Comment_Text" NVARCHAR(2000)
  "AnalyzedTextFeedback" INT

  Indexes {
    (Ticket_ID, Flight_ID) [unique]
  }
}

Table "Cargo" {
  "Cargo_ID" INT [pk]
  "Ticket_ID" INT
  "Flight_ID" INT
  "Cargo_Type_ID" INT
  "Weight_KG" DECIMAL(10,2)
  "Volume_CM3" DECIMAL(10,2)
  "Declared_Value" DECIMAL(10,2)
  "Is_Lost" BIT
  "Is_Damaged" BIT
  "Is_Insure" BIT
  "Cargo_Delivery_Date" DATE
}

Table "Flight_Crew" {
  "Flight_ID" INT
  "Crew_ID" INT
  "Crew_Role_ID" INT
  "Assignment_Date" DATE
  "Duration_Hours" DECIMAL(6,2)
  "Hourly_Fee" DECIMAL(8,2)
  "Bonus" DECIMAL(10,2)
  "Start_Time" DATETIME
  "End_Time" DATETIME
  "Rating" INT

  Indexes {
    (Flight_ID, Crew_ID) [pk]
  }
}

Ref:"Airport"."Airport_Code" < "Route"."Origin_Airport_Code"

Ref:"Airport"."Airport_Code" < "Route"."Destination_Airport_Code"

Ref:"Loyalty_Tier"."Loyalty_Tier_ID" < "Customer"."Loyalty_Tier_ID"

Ref:"Crew_Role_Type"."Role_Type_ID" < "Crew_Role"."Crew_Role_Type_ID"

Ref:"Employee"."Employee_ID" < "Crew"."Employee_ID"

Ref:"Crew_Role_Type"."Role_Type_ID" < "Crew"."Crew_Role_Type_ID"

Ref:"Employee"."Employee_ID" < "Technician"."Employee_ID"

Ref:"Technician"."Technician_ID" < "Technician"."Supervisor_ID"

Ref:"Flight_Status"."Flight_Status_ID" < "Flight"."Flight_Status_ID"

Ref:"Aircraft"."Aircraft_ID" < "Flight"."Aircraft_ID"

Ref:"Route"."Route_ID" < "Flight"."Route_ID"

Ref:"Flight"."Flight_ID" < "Ticket"."Flight_ID"

Ref:"Class"."Class_ID" < "Ticket"."Class_ID"

Ref:"Ticket_Status"."Status_ID" < "Ticket"."Ticket_Status_ID"

Ref:"Customer"."Customer_ID" < "Booking"."Customer_ID"

Ref:"Payment_Method"."Payment_Method_ID" < "Booking"."Payment_Method_ID"

Ref:"Booking_Cancellation_Reason"."Cancellation_ID" < "Booking"."Cancellation_Reason_ID"

Ref:"Ticket"."Ticket_ID" < "Booking"."Ticket_ID"

Ref:"Aircraft"."Aircraft_ID" < "Maintenance"."Aircraft_ID"

Ref:"Maintenance_Type"."Maintenance_Type_ID" < "Maintenance"."Maintenance_Type_ID"

Ref:"Technician"."Technician_ID" < "Maintenance"."Technician_ID"

Ref:"Ticket"."Ticket_ID" < "Feedback"."Ticket_ID"

Ref:"Flight"."Flight_ID" < "Feedback"."Flight_ID"

Ref:"Ticket"."Ticket_ID" < "Cargo"."Ticket_ID"

Ref:"Flight"."Flight_ID" < "Cargo"."Flight_ID"

Ref:"Cargo_Type"."Cargo_Type_ID" < "Cargo"."Cargo_Type_ID"

Ref:"Flight"."Flight_ID" < "Flight_Crew"."Flight_ID"

Ref:"Crew"."Crew_ID" < "Flight_Crew"."Crew_ID"

Ref:"Crew_Role"."Crew_Role_ID" < "Flight_Crew"."Crew_Role_ID"
